figured out some spacing issues and created a it more of well

--- a/rocket/static/users/less/users.less
+++ b/rocket/static/users/less/users.less
@@ -291,7 +291,7 @@ a {
 
 		 	p{
 		 		margin-top: 24px;
-		 		margin-right: 15px;
+		 		margin-right: 40px;
 		 		line-height: 21px;
 		 	}
 	}
